# crea-scraper

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  _pyproject.toml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yml  scrape.yml
notebooks/: dev.ipynb
output/: course_data.csv  data.csv
output/vector_db/: index.faiss  index.pkl
src/crea_scraper/: cli.py  course.py  data.py  main.py  prompts.py  scraper.py  search.py  streamlit.py  vector_db.py
tests/: test_project_template.py
