[tool.poetry]
name = "crea_scraper"
version = "0.1.0"
description = "We scrape the CREA website in order to create an overview of the available courses, their times and availability in CSV format, and track this data over time."
authors = ["Yke Rusticus"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.21.5"  # Prevents failing build M1
beautifulsoup4 = "^4.11.1"
typer = "^0.6.1"
pandas = "^1.5.1"
aiohttp = "^3.8.3"
requests = "^2.28.1"
langchain = "^0.0.209"
openai = "^0.27.8"
tiktoken = "^0.4.0"
faiss-cpu = "^1.7.4"
scikit-learn = "^1.2.2"
isort = "^5.12.0"
streamlit = "^1.23.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
ipykernel = "^6.15.3"
pre-commit = "^2.20.0"
black = {version = "^22.10.0", allow-prereleases = true}

[tool.poetry.scripts]
scrape = "crea_scraper.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
