[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "crea_scraper"

dependencies = [
    "numpy==1.21.5",
    "beautifulsoup4==4.11.1",
    "typer==0.6.1",
    "pandas==1.5.1",
    "aiohttp==3.8.3",
    "requests==2.28.1",
    "langchain==0.0.209",
    "openai==0.27.8",
    "tiktoken==0.4.0",
    "faiss-cpu==1.7.4",
    "scikit-learn==1.2.2",
    "isort==5.12.0",
    "streamlit==1.23.1",
]
requires-python = "==3.9.*"
authors = [
    {name = "Yke"},
]
description = "Vogelsoorten oefenen"
readme = "README.md"
dynamic = ["version"]

[tool.ruff]
line-length = 100
lint.select = ["I"]
src = ["src"]

[tool.black]
line-length = 100

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
